--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
-*,
+@import "./theme";
+
 *:before,
 *:after {
   box-sizing: border-box;
@@ -10,16 +11,16 @@ body {
 }
 
 body {
-  color: theme(colors.primary);
+  color: var(--color-primary);
 
   a,
   .link {
-    color: theme(colors.links);
+    color: var(--color-links);
   }
 }
 
 input[type="tel"] {
-  border: thin solid theme(colors.primary);
+  border: thin solid var(--color-primary);
 }
 
 #root {
@@ -44,7 +45,7 @@ input[type="tel"] {
 
 .powered-by {
   font-size: 0.85rem;
-  color: theme(colors.secondary);
+  color: var(--color-secondary);
   text-align: center;
 }
 
@@ -60,7 +61,7 @@ input[type="tel"] {
         font-weight: bold;
       }
       .secondary {
-        color: theme(colors.secondary);
+        color: var(--color-secondary);
         align-self: center;
         margin: 0 0.3rem;
       }
