--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
     <link rel="icon" href="/images/favicon-150x150.png" sizes="32x32" />
     <link rel="icon" href="/images/favicon-300x300.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/images/favicon-300x300.png" />
+    <script
+      src="https://kit.fontawesome.com/090ca49637.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript">
       window.__G_DATA = <%- serialize({ initialState, ssrData }, { isJSON: true }); %>
     </script>
