feat: implement price subscription and refactor apollo client creation

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -93,6 +93,7 @@ input[type="tel"] {
 
     .value {
       color: var(--color-secondary);
+      text-align: center;
       .primary {
         font-size: 1.2rem;
         text-align: center;
