--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -245,3 +245,19 @@ input[type="tel"] {
   background-color: var(--color-highlight-bg);
   color: var(--color-highlight-fg);
 }
+
+.fee-amount {
+  padding: 0.75rem;
+  border: thin dashed var(--color-gray);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.75rem;
+  .label {
+    margin-right: 0.75rem;
+    font-weight: bold;
+  }
+  .fee-usd-amount {
+    text-align: left;
+  }
+}
