feat: implement scanning and parsing a QR code

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -278,3 +278,19 @@ input[type="tel"] {
 .geetest_wind.geetest_panel .geetest_panel_box {
   top: 25% !important;
 }
+
+.qr-code-camera {
+  position: absolute;
+  top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.scan {
+  margin: 1rem auto;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
