--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,10 +28,6 @@ body {
   color: var(--color-gray);
 }
 
-input[type="tel"] {
-  border: thin solid var(--color-primary);
-}
-
 .error {
   color: red;
   margin: 1rem auto;
@@ -218,7 +214,7 @@ input[type="tel"] {
     margin-bottom: 1rem;
   }
   * input {
-    width: 100%;
+    min-width: 275px;
   }
 }
 
