feat: add navigation to email registration

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -310,6 +310,10 @@ body {
   input.auth-code {
     width: unset;
   }
+  .register {
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
 }
 
 .captcha-challenge {
