feat: add setting row for username display

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -648,7 +648,8 @@ a svg {
       margin-left: 1rem;
       margin-right: 1rem;
     }
-    .icon i {
+    .icon i,
+    .action i {
       font-size: 2rem;
     }
     .name {
