--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -646,18 +646,18 @@ a svg {
     padding: 1rem;
     border: thin solid var(--color-borders);
     border-radius: 0.5rem;
-    .icon,
-    .name,
-    .action {
-      margin-left: 1rem;
-      margin-right: 1rem;
+    position: relative;
+    .icon {
+      width: 5%;
+      min-width: 45px;
     }
     .icon i,
     .action i {
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
     .name {
-      flex: 2;
+      width: 45%;
+      min-width: 200px;
       .sub {
         color: var(--color-subtext);
         margin-top: 0.5rem;
@@ -665,7 +665,9 @@ a svg {
       }
     }
     .action {
-      flex: 1;
+      width: 50%;
+      min-width: 250px;
+      text-align: right;
     }
   }
 }
@@ -683,6 +685,22 @@ a svg {
     .links {
       a .name {
         display: none;
+      }
+    }
+  }
+  .settings {
+    .setting {
+      flex-wrap: wrap;
+      .icon {
+        font-size: 0.75rem;
+      }
+      .action {
+        width: 100%;
+        margin-top: 1rem;
+        text-align: center;
+        i {
+          display: none;
+        }
       }
     }
   }
