chore: remove Small component variant

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 /*! purgecss start ignore */
 @import "@galoymoney/react/styles";
 @import "./main";
+@import "./themes/default";
 /*! purgecss end ignore */
