feat: introduce a wallet theme/layout settings

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 /*! purgecss start ignore */
 @import "@galoymoney/react/styles";
+@import "./general";
 @import "./main";
-@import "./themes/default";
+@import "./responsive";
 /*! purgecss end ignore */
