--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,151 +1,3 @@
-@import "./theme";
-
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-body {
-  min-width: 375px;
-  padding-bottom: 250px;
-  background-color: var(--color-bg);
-  color: var(--color-primary);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-
-  a,
-  .link {
-    color: var(--color-links);
-    text-decoration: none;
-    cursor: pointer;
-    i {
-      margin-right: 0.45rem;
-    }
-  }
-
-  img {
-    vertical-align: middle;
-  }
-
-  input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-
-  input[type="number"] {
-    -moz-appearance: textfield;
-  }
-
-  input,
-  textarea,
-  select {
-    width: 100%;
-    max-width: 300px;
-    padding: 0.75rem;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    color: var(--color-primary);
-    background-color: var(--color-light-bg);
-    border: thin solid var(--color-borders);
-    border-radius: 0.25rem;
-  }
-
-  input:focus,
-  textarea:focus,
-  select:focus {
-    outline: none;
-  }
-
-  select {
-    background: linear-gradient(45deg, transparent 50%, var(--color-button-fg) 50%),
-      linear-gradient(135deg, var(--color-button-fg) 50%, transparent 50%),
-      linear-gradient(to right, var(--color-button-bg), var(--color-button-bg));
-    background-position: calc(100% - 21px) calc(1em + 2px),
-      calc(100% - 16px) calc(1em + 2px), 100% 0;
-    background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
-    background-repeat: no-repeat;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-  }
-
-  button,
-  .button {
-    display: inline-flex;
-    padding: 0.5rem 1rem;
-    border: thin solid var(--color-borders);
-    border-radius: 0.25rem;
-    text-decoration: none;
-    text-align: center;
-    transition: all 0.2s;
-    color: var(--color-button-fg);
-    background-color: var(--color-button-bg);
-  }
-  button:disabled,
-  button[disabled] {
-    background-color: var(--color-disabled-button-bg);
-    color: var(--color-disabled-button-fg);
-  }
-}
-
-::placeholder {
-  color: var(--color-subtext);
-}
-
-.error {
-  color: var(--color-error);
-  margin: 1rem auto;
-  text-align: center;
-}
-
-.small {
-  font-size: 0.8rem;
-}
-
-.sat-symbol {
-  margin-right: 2px;
-}
-
-svg {
-  width: 21px;
-  height: 21px;
-}
-
-a svg {
-  margin-right: 0.75rem;
-}
-
-.page-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-align: center;
-  margin: 2rem auto;
-}
-
-.separator {
-  display: inline-block;
-  margin: 0 0.5rem;
-  color: var(--color-subtext);
-}
-
-.hint {
-  color: var(--color-subtext);
-}
-
-.center-display {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 375px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.action-button {
-  margin: 2rem auto;
-}
-
 .amount-input {
   flex-direction: row;
   .currency-label {
@@ -594,63 +446,94 @@ button {
   }
 }
 
+.header-container {
+  margin-bottom: 2rem;
+  .header {
+    margin-right: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .balance {
+      cursor: pointer;
+      .title {
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+
+      .value {
+        text-align: center;
+        .primary {
+          font-size: 1.2rem;
+          text-align: center;
+        }
+        .secondary {
+          color: var(--color-secondary);
+          margin-top: 0.2rem;
+          text-align: center;
+        }
+      }
+    }
+    .links {
+      display: flex;
+      justify-content: space-around;
+      font-size: 1.1rem;
+      .menu-icon {
+        cursor: pointer;
+        font-size: 1.25rem;
+        color: var(--color-links);
+      }
+    }
+  }
+}
+
+.header-nav {
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: row;
+  a {
+    margin: 1rem auto;
+    border: thin solid var(--color-borders);
+    border-radius: 0.25rem;
+    padding: 0.75rem 1.75rem;
+    background-color: var(--color-light-bg);
+    width: 75%;
+    max-width: 225px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .active {
+    background-color: var(--color-active-bg);
+    font-weight: bold;
+    color: var(--color-primary);
+  }
+}
+
+.home {
+  .header-nav {
+    margin-top: 3rem;
+  }
+}
+
+.fee-amount {
+  padding: 0.75rem;
+  border: thin dashed var(--color-borders);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.75rem;
+  .label {
+    margin-right: 0.75rem;
+    font-weight: bold;
+  }
+  .fee-usd-amount {
+    text-align: left;
+  }
+}
+
 .link-copied {
   padding: 1rem;
   margin: 0.5rem auto;
   background-color: var(--color-bg);
   color: var(--color-primary);
-}
-
-/* Responsive Styles */
-
-@media (max-width: 800px) {
-  .contacts {
-    .list {
-      justify-content: center;
-    }
-  }
-}
-
-@media (max-width: 600px) {
-  .header-container {
-    .links {
-      a .name {
-        display: none;
-      }
-    }
-  }
-  .settings {
-    .setting {
-      flex-wrap: wrap;
-      .icon {
-        font-size: 0.75rem;
-      }
-      .action {
-        width: 100%;
-        margin-top: 1rem;
-        text-align: center;
-        i {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 700px) {
-  .header-nav {
-    display: none;
-  }
-  .home {
-    .header-nav {
-      margin-top: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      a {
-        text-align: unset;
-        margin: 0.65rem auto;
-        padding: 0.75rem 1.5rem;
-      }
-    }
-  }
 }
