--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -39,7 +39,6 @@ body {
   textarea,
   select {
     width: 100%;
-    max-width: 300px;
     padding: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
@@ -47,6 +46,15 @@ body {
     background-color: var(--color-light-bg);
     border: thin solid var(--color-borders);
     border-radius: 0.25rem;
+  }
+
+  input:disabled,
+  input[disabled],
+  textarea:disabled,
+  textarea[disabled] select:disabled,
+  select[disabled] {
+    background-color: var(--color-disabled-button-bg);
+    color: var(--color-disabled-button-fg);
   }
 
   input:focus,
@@ -69,7 +77,7 @@ body {
 
   button,
   .button {
-    display: inline-flex;
+    align-self: center;
     padding: 0.5rem 1rem;
     border: thin solid var(--color-borders);
     border-radius: 0.25rem;
@@ -135,7 +143,6 @@ a svg {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   max-width: 375px;
   margin: 0 auto;
   text-align: center;
