--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -13,11 +13,15 @@ body {
 
   a,
   .link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     color: var(--color-links);
     text-decoration: none;
     cursor: pointer;
-    i {
-      margin-right: 0.45rem;
+    i,
+    svg {
+      margin-right: 0.5rem;
     }
   }
 
@@ -114,8 +118,8 @@ body {
 }
 
 svg {
-  width: 21px;
-  height: 21px;
+  width: 24px;
+  height: 24px;
 }
 
 a svg {
